--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "php": ">=5.4",
     "johnpbloch/wordpress": "4.0.1",
     "composer/installers": "v1.0.12",
-    "vlucas/phpdotenv": "1.0.9"
+    "vlucas/phpdotenv": "1.0.9",
+    "wpackagist-plugin/wpmbytplayer": "~1.9"
   },
   "extra": {
     "installer-paths": {
