--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-DB_NAME=database_name
-DB_USER=database_user
-DB_PASSWORD=database_password
-DB_HOST=database_host
-
-WP_ENV=development
-WP_HOME=http://example.com
-WP_SITEURL=http://example.com/wp
+DB_NAME=database_name # Database name
+DB_USER=database_user # Database user
+DB_PASSWORD=database_password # Database password
+DB_HOST=database_host # Database host (defaults to localhost)
+WP_ENV=development # Set to environment (development, staging, production, etc)
+WP_HOME=http://andre.me/projects/thepololife # Full URL to WordPress home (http://example.com)
+WP_SITEURL=http://andre.me/projects/thepololife # Full URL to WordPress including subdirectory (http://example.com/wp)
