--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "php": ">=5.4",
     "johnpbloch/wordpress": "4.1",
     "composer/installers": "v1.0.12",
-    "vlucas/phpdotenv": "1.0.9"
+    "vlucas/phpdotenv": "1.0.9",
+    "wpackagist-plugin/wordpress-database-reset": ">=2.3.1"
   },
   "extra": {
     "installer-paths": {
